# agentic-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
basic/: README.md  classobjects.py  decorators.py  encapsulations.py  example.txt  fileoperations.py  functions.py  inheritance.py  itergen.py  magicmethods.py  polymorphism.py  polymorphismwithabc.py
langchain-ho/: README.md  attention.txt  hfembedstore.py  jsonwork.py  pdfwork.py  vectorstore.py  webpage.py
pydantic-validation/: README.md  main.py
