[project]
name = "agentic-ai-workflows"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "openai",
    "ipython",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "pypdf>=6.14.2",
    "bs4>=0.0.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-openai>=1.3.5",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.6.0",
    "langchain-huggingface>=1.2.2",
    "faiss-cpu>=1.14.3",
    "langchain-chroma>=1.1.0",
]
